CHANGES

1.0-beta9:

	* fix another bug with "linked default amount" (always used)

1.0-beta9:
	
	* fix bug: "linked default amount" used even if user is unlinked

1.0-beta8:
	
	* handle reddit server errors better (don't show error, retry after 30s)
	* new special default amount for "linked" recipients
	* remove "disallow linked" functionality

1.0-beta7:

	* translate amount_fiat header even if ec pref "show history rates" unchecked
	* new menu item: "open blockexplorer to payment tx"
	* batch "mark_read" actions through reddit api
	* don't use send to many when "pay..."ing only 1 tip (so amount can then be edited on send tab)
	* better tipUpdated implementation (less flickering und sort-screwing)
	* parse claimed/returned messages
	* new column "Acceptance Status" (can be linked, not yet linked, claimed, returned)
	* allow u/chaintip <currency_symbol><decimal> (exmaple: "u/chaintip $1")
	* "mark_read" also marks claim/returned messages
	* setting to "Disallow autopay if the user has already linked a wallet."
	* commit settings when dialog closes, not at every read/write (could speed up opening settings dialog)
	* new menu entry "open browser to tipping comment parent"
	* check for updates on first activation
	* option to mark_read paid messages

1.0-beta5:

	* fix parser again 

1.0-beta4:

	* TipList: new column "amount (fiat)"
	* remove all <quantity_alias>es except "a" and "an"
	* fix parser to catch correct relay address in case of unlinked recipients

1.0-beta3:

	* remove "qrelay" prefix requirement when parsing chaintip messages

1.0-beta2:

	* gui: improve "show amount monikers"
	* tip comment parser: don't require leading "/" before "u/chaintip" 
	* wait for wallet to sync on activation
	* fix bug with "disallow autopay when default amount used" always disallowing
	* refresh tips on settings change
	* add new column "subreddit" showing subreddit of tipping comment
	* whacky hackjob using sleep() to lessen the double-spend problem